[package]
name = "apply-route-template"
version = "0.2.0"
edition = "2024"

[dependencies]
cidr = "0.3.1"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
rtnetlink = { git = "https://github.com/rust-netlink/rtnetlink.git" }
serde_json = "1.0.145"
systemd = "0.10.1"
tokio = { version = "1.48.0", features = ["full"] }
